# mvn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.debug  LICENSE  diesel.toml  docker-compose.yml  drill.yml  llvm-config.sh  req.sh
argonautica/: Cargo.toml  build.rs
argonautica/examples/: calibrate_timing.rs  example_custom.rs  example_non_blocking.rs  example_serde.rs  example_simple.rs  example_very_simple.rs  generate_secret_key.rs
argonautica/phc-winner-argon2/: Makefile
argonautica/phc-winner-argon2/src/blake2/: blamka-round-opt.h
argonautica/src/: error.rs  error_kind.rs  hasher.rs  lib.rs  utils.rs  verifier.rs
argonautica/src/backend/c/: decode.rs  encode.rs
argonautica/src/backend/rust/: decode.rs  encode.rs
argonautica/src/config/: backend.rs  defaults.rs  hasher_config.rs  variant.rs  verifier_config.rs  version.rs
argonautica/src/input/: additional_data.rs  container.rs  salt.rs  secret_key.rs
argonautica/src/output/: hash_raw.rs
argonautica/tests/: tests.rs
assets/: page.js
migrations/2025-05-09-160530_initial_setup/: down.sql  up.sql
migrations/2025-05-27-195003_route_data/: down.sql  up.sql
migrator/: Cargo.toml
migrator/src/: main.rs
src/: assets.rs  auth.rs  cli.rs  cx.rs  db.rs  docs.rs  err.rs  files.rs  hashes.rs  lib.rs  logging.rs  main.rs  models.rs  queue.rs  router.rs  run.rs  s3.rs  schema.rs  seed.rs  swc.rs  templates.rs  tls.rs  tokens.rs  util.rs
src/files/: cx.rs  index.rs  mod.rs  models.rs  models_in.rs  types.rs
src/router/: access.rs  admin.rs  assets.rs  checks.rs  common.rs  dash.rs  docs.rs  force_auth.rs  get.rs  handler.rs  logging.rs  mod.rs  models.rs  request.rs  stats.rs  templates.rs  tokens.rs
src/tokens/: hash.rs  master.rs  mgr.rs  mod.rs  models.rs  models_in.rs  perms.rs  request.rs  routes.rs  token.rs
templates/: admin.html  index.html
