[package]
name = "mvn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
askama = "0.14.0"
axum = { version = "0.8.4", features = ["http2", "macros"] }
axum-auth = "0.8.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["pure-rust-locales", "serde"] }
colored = "3.0.0"
diesel = { version = "2.2.10", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.5.2", features = ["async-connection-wrapper", "deadpool", "sqlite", "tokio"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
http-body-util = "0.1.3"
humansize = "2.1.3"
infer = "0.19.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
minify-html-onepass = "0.16.4"
object_store = "0.12.0"
once_cell = "1.21.3"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
phf = { version = "0.11.3", features = ["macros"] }
random-string = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
swc_common = { version = "9.2.0", features = ["sourcemap"] }
swc_ecma_ast = "9.0.0"
swc_ecma_codegen = "11.0.0"
swc_ecma_minifier = "18.0.0"
swc_ecma_parser = "12.0.0"
swc_ecma_transforms = "17.0.0"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi"] }
urlencoding = "2.1.3"
zip = "3.0.0"
