[package]
name = "migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
dotenvy = "0.15.7"
indicatif = { version = "0.18.0", features = ["rayon", "tokio"] }
once_cell = "1.21.3"
rayon = "1.10.0"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
